--- a/main/package.json
+++ b/main/package.json
@@ -9,16 +9,17 @@
     "migrate": "node routes/init_db.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "cors": "^2.8.5",
-    "sqlite3": "^5.1.6",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.1",
-    "cloudinary": "^1.41.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -26,7 +27,11 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["photography", "booking", "wedding"],
+  "keywords": [
+    "photography",
+    "booking",
+    "wedding"
+  ],
   "author": "Royal Photowaala",
   "license": "ISC"
 }
