--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,12 +8,17 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
+    "cors": "^2.8.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "sqlite3": "^5.1.6",
-    "cloudinary": "^1.41.0",
+    "form-data": "^4.0.5",
     "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1"
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
